Sources/libMultiMarkdown/lexer.c
/* Generated by re2c 0.14.3 on Wed Feb 15 19:09:41 2017 */
/**

	MultiMarkdown 6 -- Lightweight markup processor to produce HTML, LaTeX, and more.

	@file lexer.re

	@brief Description of the regular expressions used to define tokens, 
	used by re2c to create a lexer/tokenizer.


	@author	Fletcher T. Penney
	@bug	

**/

/*

	Copyright © 2016 - 2017 Fletcher T. Penney.


	The `MultiMarkdown 6` project is released under the MIT License..
	
	GLibFacade.c and GLibFacade.h are from the MultiMarkdown v4 project:
	
		https://github.com/fletcher/MultiMarkdown-4/
	
	MMD 4 is released under both the MIT License and GPL.
	
	
	CuTest is released under the zlib/libpng license. See CuTest.c for the text
	of the license.
	
	
	## The MIT License ##
	
	Permission is hereby granted, free of charge, to any person obtaining a copy
	of this software and associated documentation files (the "Software"), to deal
	in the Software without restriction, including without limitation the rights
	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
	copies of the Software, and to permit persons to whom the Software is
	furnished to do so, subject to the following conditions:
	
	The above copyright notice and this permission notice shall be included in
	all copies or substantial portions of the Software.
	
	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
	THE SOFTWARE.

*/

#include "lexer.h"
#include "libMultiMarkdown.h"
#include "parser.h"


// Basic scanner struct

#define YYCTYPE		char
#define YYCURSOR	s->cur
#define YYMARKER	s->ptr
#define YYCTXMARKER	s->ctx


int scan(Scanner * s, const char * stop) {

	scan:

	if (s->cur >= stop) {
		return 0;
	}

	s->start = s->cur;

	
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	yych = *YYCURSOR;
	switch (yych) {
	case '\t':	goto yy45;
	case '\n':	goto yy53;
	case '\r':	goto yy55;
	case ' ':	goto yy47;
	case '!':	goto yy18;
	case '"':	goto yy28;
	case '#':	goto yy48;
	case '$':	goto yy41;
	case '%':	goto yy50;
	case '&':	goto yy35;
	case '\'':	goto yy30;
	case '(':	goto yy20;
	case ')':	goto yy22;
	case '*':	goto yy56;
	case '+':	goto yy4;
	case '-':	goto yy6;
	case '.':	goto yy32;
	case '/':	goto yy37;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy52;
	case ':':	goto yy33;
	case '<':	goto yy8;
	case '=':	goto yy12;
	case '>':	goto yy24;
	case '[':	goto yy14;
	case '\\':	goto yy39;
	case ']':	goto yy16;
	case '^':	goto yy43;
	case '_':	goto yy58;
	case '`':	goto yy60;
	case '{':	goto yy2;
	case '|':	goto yy62;
	case '}':	goto yy26;
	case '~':	goto yy10;
	default:	goto yy64;
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '+':	goto yy265;
	case '-':	goto yy264;
	case '=':	goto yy261;
	case '>':	goto yy263;
	case '{':	goto yy259;
	case '~':	goto yy262;
	default:	goto yy3;
	}
yy3:
	{ return TEXT_BRACE_LEFT; }
yy4:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '+':	goto yy256;
	default:	goto yy5;
	}
yy5:
	{ return PLUS; }
yy6:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '-':	goto yy250;
	default:	goto yy7;
	}
yy7:
	{ return DASH_N; }
yy8:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '<':	goto yy247;
	default:	goto yy9;
	}
yy9:
	{ return ANGLE_LEFT; }
yy10:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '>':	goto yy243;
	case '~':	goto yy242;
	default:	goto yy11;
	}
yy11:
	{ return SUBSCRIPT; }
yy12:
	yyaccept = 4;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy239;
	default:	goto yy13;
	}
yy13:
	{ return EQUAL; }
yy14:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '#':	goto yy235;
	case '%':	goto yy233;
	case '^':	goto yy237;
	default:	goto yy15;
	}
yy15:
	{ return BRACKET_LEFT; }
yy16:
	++YYCURSOR;
	{ return BRACKET_RIGHT; }
yy18:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '[':	goto yy231;
	default:	goto yy19;
	}
yy19:
	{ goto scan; }
yy20:
	++YYCURSOR;
	{ return PAREN_LEFT; }
yy22:
	++YYCURSOR;
	{ return PAREN_RIGHT; }
yy24:
	++YYCURSOR;
	{ return ANGLE_RIGHT; }
yy26:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '}':	goto yy229;
	default:	goto yy27;
	}
yy27:
	{ return TEXT_BRACE_RIGHT; }
yy28:
	++YYCURSOR;
	{ return QUOTE_DOUBLE; }
yy30:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '\'':	goto yy227;
	default:	goto yy31;
	}
yy31:
	{ return QUOTE_SINGLE; }
yy32:
	YYCTXMARKER = YYCURSOR + 1;
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':	goto yy217;
	case '\n':	goto yy214;
	case '\r':	goto yy216;
	case ' ':	goto yy219;
	case '.':	goto yy220;
	default:	goto yy19;
	}
yy33:
	++YYCURSOR;
	{ return COLON; }
yy35:
	yyaccept = 6;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'A':
	case 'a':	goto yy209;
	default:	goto yy36;
	}
yy36:
	{ return AMPERSAND; }
yy37:
	++YYCURSOR;
	{ return SLASH; }
yy39:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '\n':	goto yy132;
	case '\r':	goto yy134;
	case ' ':	goto yy137;
	case '!':	goto yy197;
	case '"':	goto yy187;
	case '#':	goto yy167;
	case '$':	goto yy165;
	case '%':	goto yy163;
	case '&':	goto yy151;
	case '\'':	goto yy185;
	case '(':	goto yy179;
	case ')':	goto yy177;
	case '*':	goto yy143;
	case '+':	goto yy161;
	case ',':	goto yy193;
	case '-':	goto yy159;
	case '.':	goto yy199;
	case '/':	goto yy147;
	case ':':	goto yy189;
	case ';':	goto yy191;
	case '<':	goto yy155;
	case '=':	goto yy157;
	case '>':	goto yy153;
	case '?':	goto yy195;
	case '@':	goto yy149;
	case '[':	goto yy171;
	case '\\':	goto yy135;
	case ']':	goto yy169;
	case '^':	goto yy145;
	case '_':	goto yy141;
	case '`':	goto yy183;
	case '{':	goto yy175;
	case '|':	goto yy139;
	case '}':	goto yy173;
	case '~':	goto yy181;
	default:	goto yy40;
	}
yy40:
	{ return TEXT_BACKSLASH; }
yy41:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '$':	goto yy130;
	default:	goto yy42;
	}
yy42:
	{ return MATH_DOLLAR_SINGLE; }
yy43:
	++YYCURSOR;
	{ return SUPERSCRIPT; }
yy45:
	++YYCURSOR;
	{ return INDENT_TAB; }
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy53;
	case '\r':	goto yy121;
	case ' ':	goto yy119;
	default:	goto yy19;
	}
yy48:
	YYCTXMARKER = YYCURSOR + 1;
	yyaccept = 7;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy80;
	case '#':	goto yy78;
	default:	goto yy49;
	}
yy49:
	{ return TEXT_HASH; }
yy50:
	++YYCURSOR;
	{ return TEXT_PERCENT; }
yy52:
	YYCTXMARKER = YYCURSOR + 1;
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '.':	goto yy69;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy71;
	default:	goto yy19;
	}
yy53:
	++YYCURSOR;
yy54:
	{ return TEXT_NL; }
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy53;
	default:	goto yy54;
	}
yy56:
	++YYCURSOR;
	{ return STAR; }
yy58:
	++YYCURSOR;
	{ return UL; }
yy60:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy68;
yy61:
	{ return BACKTICK; }
yy62:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy66;
yy63:
	{ return PIPE; }
yy64:
	yych = *++YYCURSOR;
	goto yy19;
yy65:
	++YYCURSOR;
	yych = *YYCURSOR;
yy66:
	switch (yych) {
	case '|':	goto yy65;
	default:	goto yy63;
	}
yy67:
	++YYCURSOR;
	yych = *YYCURSOR;
yy68:
	switch (yych) {
	case '`':	goto yy67;
	default:	goto yy61;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy76;
	case '\n':	goto yy73;
	case '\r':	goto yy75;
	default:	goto yy70;
	}
yy70:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy3;
	case 1: 	goto yy5;
	case 2: 	goto yy9;
	case 3: 	goto yy11;
	case 4: 	goto yy13;
	case 5: 	goto yy19;
	case 6: 	goto yy36;
	case 7: 	goto yy49;
	case 8: 	goto yy127;
	case 9: 	goto yy215;
	default:	goto yy260;
	}
yy71:
	YYCTXMARKER = YYCURSOR + 1;
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '.':	goto yy69;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy71;
	default:	goto yy70;
	}
yy73:
	++YYCURSOR;
yy74:
	YYCURSOR = YYCTXMARKER;
	{ return TEXT_NUMBER_POSS_LIST; }
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy73;
	default:	goto yy74;
	}
yy76:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy76;
	default:	goto yy74;
	}
yy78:
	YYCTXMARKER = YYCURSOR + 1;
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy86;
	case '#':	goto yy91;
	default:	goto yy70;
	}
yy79:
	++YYCURSOR;
	yych = *YYCURSOR;
yy80:
	switch (yych) {
	case '\t':
	case ' ':	goto yy79;
	case '\n':	goto yy82;
	case '\r':	goto yy84;
	default:	goto yy81;
	}
yy81:
	{ return HASH1; }
yy82:
	++YYCURSOR;
yy83:
	YYCURSOR = YYCTXMARKER;
	{ return HASH1; }
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy82;
	default:	goto yy83;
	}
yy85:
	++YYCURSOR;
	yych = *YYCURSOR;
yy86:
	switch (yych) {
	case '\t':
	case ' ':	goto yy85;
	case '\n':	goto yy88;
	case '\r':	goto yy90;
	default:	goto yy87;
	}
yy87:
	{ return HASH2; }
yy88:
	++YYCURSOR;
yy89:
	YYCURSOR = YYCTXMARKER;
	{ return HASH2; }
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy88;
	default:	goto yy89;
	}
yy91:
	YYCTXMARKER = YYCURSOR + 1;
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy94;
	case '#':	goto yy92;
	default:	goto yy70;
	}
yy92:
	YYCTXMARKER = YYCURSOR + 1;
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy100;
	case '#':	goto yy105;
	default:	goto yy70;
	}
yy93:
	++YYCURSOR;
	yych = *YYCURSOR;
yy94:
	switch (yych) {
	case '\t':
	case ' ':	goto yy93;
	case '\n':	goto yy96;
	case '\r':	goto yy98;
	default:	goto yy95;
	}
yy95:
	{ return HASH3; }
yy96:
	++YYCURSOR;
yy97:
	YYCURSOR = YYCTXMARKER;
	{ return HASH3; }
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy96;
	default:	goto yy97;
	}
yy99:
	++YYCURSOR;
	yych = *YYCURSOR;
yy100:
	switch (yych) {
	case '\t':
	case ' ':	goto yy99;
	case '\n':	goto yy102;
	case '\r':	goto yy104;
	default:	goto yy101;
	}
yy101:
	{ return HASH4; }
yy102:
	++YYCURSOR;
yy103:
	YYCURSOR = YYCTXMARKER;
	{ return HASH4; }
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy102;
	default:	goto yy103;
	}
yy105:
	YYCTXMARKER = YYCURSOR + 1;
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy108;
	case '#':	goto yy106;
	default:	goto yy70;
	}
yy106:
	YYCTXMARKER = YYCURSOR + 1;
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy114;
	default:	goto yy70;
	}
yy107:
	++YYCURSOR;
	yych = *YYCURSOR;
yy108:
	switch (yych) {
	case '\t':
	case ' ':	goto yy107;
	case '\n':	goto yy110;
	case '\r':	goto yy112;
	default:	goto yy109;
	}
yy109:
	{ return HASH5; }
yy110:
	++YYCURSOR;
yy111:
	YYCURSOR = YYCTXMARKER;
	{ return HASH5; }
yy112:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy110;
	default:	goto yy111;
	}
yy113:
	++YYCURSOR;
	yych = *YYCURSOR;
yy114:
	switch (yych) {
	case '\t':
	case ' ':	goto yy113;
	case '\n':	goto yy116;
	case '\r':	goto yy118;
	default:	goto yy115;
	}
yy115:
	{ return HASH6; }
yy116:
	++YYCURSOR;
yy117:
	YYCURSOR = YYCTXMARKER;
	{ return HASH6; }
yy118:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy116;
	default:	goto yy117;
	}
yy119:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '\n':	goto yy123;
	case '\r':	goto yy125;
	case ' ':	goto yy122;
	default:	goto yy120;
	}
yy120:
	{ return NON_INDENT_SPACE; }
yy121:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy53;
	default:	goto yy54;
	}
yy122:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy123;
	case '\r':	goto yy125;
	case ' ':	goto yy126;
	default:	goto yy120;
	}
yy123:
	++YYCURSOR;
yy124:
	{ return TEXT_LINEBREAK; }
yy125:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy123;
	default:	goto yy124;
	}
yy126:
	yyaccept = 8;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy123;
	case '\r':	goto yy125;
	case ' ':	goto yy128;
	default:	goto yy127;
	}
yy127:
	{ return INDENT_SPACE; }
yy128:
	++YYCURSOR;
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy123;
	case '\r':	goto yy125;
	case ' ':	goto yy128;
	default:	goto yy70;
	}
yy130:
	++YYCURSOR;
	{ return MATH_DOLLAR_DOUBLE; }
yy132:
	++YYCURSOR;
yy133:
	{ return TEXT_LINEBREAK; }
yy134:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy132;
	default:	goto yy133;
	}
yy135:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '(':	goto yy201;
	case ')':	goto yy203;
	case '[':	goto yy205;
	case ']':	goto yy207;
	default:	goto yy136;
	}
yy136:
	{ return ESCAPED_CHARACTER; }
yy137:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy139:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy141:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy143:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy145:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy147:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy149:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy151:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy153:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy155:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy157:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy159:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy161:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy163:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy165:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy167:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy169:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy171:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy173:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy175:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy177:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy179:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy181:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy183:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy185:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy187:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy189:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy191:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy193:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy195:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy197:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy199:
	++YYCURSOR;
	{ return ESCAPED_CHARACTER; }
yy201:
	++YYCURSOR;
	{ return MATH_PAREN_OPEN; }
yy203:
	++YYCURSOR;
	{ return MATH_PAREN_CLOSE; }
yy205:
	++YYCURSOR;
	{ return MATH_BRACKET_OPEN; }
yy207:
	++YYCURSOR;
	{ return MATH_BRACKET_CLOSE; }
yy209:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'M':
	case 'm':	goto yy210;
	default:	goto yy70;
	}
yy210:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'P':
	case 'p':	goto yy211;
	default:	goto yy70;
	}
yy211:
	yych = *++YYCURSOR;
	switch (yych) {
	case ';':	goto yy212;
	default:	goto yy70;
	}
yy212:
	++YYCURSOR;
	{ return AMPERSAND_LONG; }
yy214:
	++YYCURSOR;
yy215:
	YYCURSOR = YYCTXMARKER;
	{ return TEXT_PERIOD; }
yy216:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy214;
	default:	goto yy215;
	}
yy217:
	++YYCURSOR;
	yych = *YYCURSOR;
yy218:
	switch (yych) {
	case '\t':
	case ' ':	goto yy217;
	default:	goto yy215;
	}
yy219:
	yyaccept = 9;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '.':	goto yy223;
	default:	goto yy218;
	}
yy220:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy221;
	default:	goto yy70;
	}
yy221:
	++YYCURSOR;
	{ return ELLIPSIS; }
yy223:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy224;
	default:	goto yy70;
	}
yy224:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy225;
	default:	goto yy70;
	}
yy225:
	++YYCURSOR;
	{ return ELLIPSIS; }
yy227:
	++YYCURSOR;
	{ return QUOTE_RIGHT_ALT; }
yy229:
	++YYCURSOR;
	{ return BRACE_DOUBLE_RIGHT; }
yy231:
	++YYCURSOR;
	{ return BRACKET_IMAGE_LEFT; }
yy233:
	++YYCURSOR;
	{ return BRACKET_VARIABLE_LEFT; }
yy235:
	++YYCURSOR;
	{ return BRACKET_CITATION_LEFT; }
yy237:
	++YYCURSOR;
	{ return BRACKET_FOOTNOTE_LEFT; }
yy239:
